# RepoMori

./: .gitignore  .repomori-scan-baseline.json  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE.md  NOTICE.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  commercial_licensing.yml  config.yml  feature_request.md  feature_request.yml  first_tester_feedback.yml  question.md  question.yml  security_contact.yml
.github/workflows/: handoff-health.yml  memory-anchor-reusable.yml  memory-anchor-smoke.yml  memory-anchor.yml  publish-release.yml  release-candidate.yml  release-health.yml  tests.yml
docs/: agent-protocol.md  baseline-drift-watchlist.md  cli-reference.md  commercial-use.md  compatibility.md  enterprise-readiness.md  first-tester.md  incremental-packs.md  license-faq.md  mcp-setup.md  memory-anchor-reusable.md  public-safety-scan.md  quickstart.md  release-candidate.md  release-check.md  release-evidence.md  release-health.md  release-integrity.md  release-policy-matrix.md  release-policy-selection.md  release-policy.md  release-publishing.md  release-signing.md  schemas.md  security-model.md  snapshot-backup-restore.md  tester-feedback.md
docs/releases/: 0.2.0-final-promotion.md  0.2.0-validation.md  0.2.0.md  0.2.0rc1-validation.md  0.2.0rc1.md  0.2.1-validation.md  0.2.1.md
examples/quickstart-demo/: README.md
examples/quickstart-demo/demo-repo/: README.md  app.py
examples/quickstart-demo/demo-repo/docs/: architecture.md
repomori/: __init__.py  __main__.py  cli.py  codec.py
tests/: test_codec.py
tests/fixtures/: compat-contracts.json  release-policy-basic.json  release-policy-dev-unsigned.json  release-policy-enterprise-signed.json  release-policy-strict-no-warnings.json
(+1 files in other folders)
