[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repomori"
version = "0.2.1"
description = "Machine-readable repository packs for AI agents and local tools."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "TWO HANDS NETWORK LTD" }]
maintainers = [{ name = "Martin Ollett" }]
license = { file = "LICENSE.md" }
keywords = [
    "ai-agents",
    "context",
    "machine-readable",
    "offline",
    "repository",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Martin123132/RepoMori"
Repository = "https://github.com/Martin123132/RepoMori"
Issues = "https://github.com/Martin123132/RepoMori/issues"
Documentation = "https://github.com/Martin123132/RepoMori/tree/main/docs"

[project.scripts]
repomori = "repomori.cli:main"

[tool.setuptools.packages.find]
include = ["repomori*"]
